k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ourlittletribe
spec:
  type: ClusterIP # Change to NodePort or LoadBalancer if you want external access directly
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: ourlittletribe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: arpanpathak/ourlittletribe-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
