k8s/gateway-template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: outlittletribe-gateway
  namespace: ourlittletribe
spec:
  gatewayClassName: eg
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "<MAGIC_DOMAIN>"
    tls:
      mode: Terminate
      certificateRefs:
      - name: ourlittletribe-tls
  - name: http
    protocol: HTTP
    port: 80
    hostname: "<MAGIC_DOMAIN>"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: ourlittletribe
spec:
  parentRefs:
  - name: outlittletribe-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - name: backend-service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: ourlittletribe
spec:
  parentRefs:
  - name: outlittletribe-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
